--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/lodash.isequal": "^4.5.5",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
+    "@types/react": "^16.8.23",
     "typescript": "^3.5.3"
   },
   "browserslist": [
@@ -25,8 +26,6 @@
     "IE 11"
   ],
   "dependencies": {
-    "@tarojs/taro": "^1.3.34",
-    "lodash.isequal": "^4.5.0",
-    "@types/react": "^16.8.23"
+    "lodash.isequal": "^4.5.0"
   }
 }
