--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "module": "esnext",
-    "target": "ES2015",
+    "module": "CommonJS",
+    "target": "ES5",
     "lib": ["esnext", "dom"],
     "sourceMap": false,
     "baseUrl": ".",
